--- a/muramator.html
+++ b/muramator.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title> - jsFiddle demo by karlin</title>
+  <script type="text/javascript" src="lodash.underscore.js"></script>
   <script type="text/javascript" src="jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="d3.v2.min.js"></script>
   <script type="text/javascript" src="muramator.js"></script>
