--- a/src/muramator.html
+++ b/src/muramator.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title> - jsFiddle demo by karlin</title>
-  <script type="text/javascript" src="lodash.underscore.js"></script>
+  <title>Muramator simulation</title>
+  <!--script type="text/javascript" src="lodash.underscore.js"></script>
   <script type="text/javascript" src="jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="d3.v2.min.js"></script>
-  <script type="text/javascript" src="muramator.js"></script>
+  <script type="text/javascript" src="muramator.js"></script-->
+  
+  <script type="text/javascript" src="all.js"></script>
   <link rel="stylesheet" type="text/css" href="muramator.css">
 </head>
 <body></body>
