--- a/src/muramator.html
+++ b/src/muramator.html
@@ -3,12 +3,15 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Muramator simulation</title>
-  <!--script type="text/javascript" src="lodash.underscore.js"></script>
+  <script type="text/javascript">document.muramator = {};</script>
+  <!-- 
+  <script type="text/javascript" src="lodash.underscore.js"></script>
   <script type="text/javascript" src="jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="d3.v2.min.js"></script>
-  <script type="text/javascript" src="muramator.js"></script-->
-
-  <script type="text/javascript">document.muramator = {};</script>
+  <script type="text/javascript" src="contextGraph.js"></script>
+  <script type="text/javascript" src="svg.js"></script>
+  <script type="text/javascript" src="muramator.js"></script>
+ -->
   <script type="text/javascript" src="all.js"></script>
   <link rel="stylesheet" type="text/css" href="muramator.css">
 </head>
