--- a/src/muramator.html
+++ b/src/muramator.html
@@ -4,16 +4,14 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Muramator simulation</title>
   <script type="text/javascript">document.muramator = {};</script>
-  <!-- 
   <script type="text/javascript" src="lodash.underscore.js"></script>
-  <script type="text/javascript" src="jquery-1.9.1.min.js"></script>
-  <script type="text/javascript" src="d3.v2.min.js"></script>
-  <script type="text/javascript" src="contextGraph.js"></script>
-  <script type="text/javascript" src="svg.js"></script>
-  <script type="text/javascript" src="muramator.js"></script>
- -->
-  <script type="text/javascript" src="all.js"></script>
+  <!-- <script type="text/javascript" src="jquery-1.9.1.min.js"></script> -->
+  <script type="text/javascript" src="d3.js"></script>
+  <script type="text/javascript" src="js/contextGraph.js"></script>
+  <script type="text/javascript" src="js/svg.js"></script>
   <link rel="stylesheet" type="text/css" href="muramator.css">
 </head>
 <body></body>
+<script type="text/javascript" src="js/muramator.js"></script>
+  <!-- <script type="text/javascript" src="all.js"></script> -->
 </html>
