--- a/src/muramator.html
+++ b/src/muramator.html
@@ -11,7 +11,10 @@
   <script type="text/javascript" src="js/svg.js"></script>
   <link rel="stylesheet" type="text/css" href="muramator.css">
 </head>
-<body></body>
+<body>
+  <input type="radio" name="network-choice" value="0" />Oscillator<br/>
+  <input type="radio" name="network-choice" value="1" />Muramator<br/>
+</body>
 <script type="text/javascript" src="js/muramator.js"></script>
   <!-- <script type="text/javascript" src="all.js"></script> -->
 </html>
