Default network selected

--- a/src/muramator.html
+++ b/src/muramator.html
@@ -12,8 +12,10 @@
   <link rel="stylesheet" type="text/css" href="muramator.css">
 </head>
 <body>
-  <input type="radio" name="network-choice" value="1" />Muramator<br/>
-  <input type="radio" name="network-choice" value="0" />Oscillator<br/>
+  <form>
+    <input type="radio" name="network-choice" value="0" checked />Oscillator<br/>
+    <input type="radio" name="network-choice" value="1" />Muramator<br/>
+  </form>
 </body>
 <script type="text/javascript" src="js/muramator.js"></script>
   <!-- <script type="text/javascript" src="all.js"></script> -->
