Remove duped self-links

--- a/src/muramator.html
+++ b/src/muramator.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <form>
-    <input type="radio" name="network-choice" value="0" checked />Oscillator<br/>
-    <input type="radio" name="network-choice" value="1" />Muramator<br/>
+    <input type="radio" name="network-choice" value="0" />Oscillator<br/>
+    <input type="radio" name="network-choice" value="1" checked/>Muramator<br/>
   </form>
 </body>
 <script type="text/javascript" src="js/muramator.js"></script>
