Graph shows selected neuron
Moved some state out of main simulation functions

--- a/src/muramator.html
+++ b/src/muramator.html
@@ -5,7 +5,6 @@
   <title>Muramator simulation</title>
   <script type="text/javascript">document.muramator = {};</script>
   <script type="text/javascript" src="lodash.underscore.js"></script>
-  <!-- <script type="text/javascript" src="jquery-1.9.1.min.js"></script> -->
   <script type="text/javascript" src="d3.js"></script>
   <script type="text/javascript" src="js/contextGraph.js"></script>
   <script type="text/javascript" src="js/svg.js"></script>
@@ -13,8 +12,8 @@
 </head>
 <body>
   <form>
-    <input type="radio" name="network-choice" value="0" />Oscillator<br/>
-    <input type="radio" name="network-choice" value="1" checked/>Muramator<br/>
+    <input type="radio" name="network-choice" value="osc" />Oscillator<br/>
+    <input type="radio" name="network-choice" value="muramator" checked />Muramator<br/>
   </form>
 </body>
 <script type="text/javascript" src="js/muramator.js"></script>
