Simulation rewrite, add controls, better encapsulation

--- a/src/muramator.html
+++ b/src/muramator.html
@@ -12,8 +12,10 @@
 </head>
 <body>
   <form>
-    <input type="radio" name="network-choice" value="osc" />Oscillator<br/>
-    <input type="radio" name="network-choice" value="muramator" checked />Muramator<br/>
+    <input type="checkbox" name="simulate">Simulate</input>
+    <input type="radio" name="network-choice" value="osc"/>Oscillator
+    <input type="radio" name="network-choice" value="muramator"/>Muramator<br/>
+    <input type="checkbox" name="report">Console Report</input>
   </form>
 </body>
 <script type="text/javascript" src="js/muramator.js"></script>
