--- a/src/muramator.html
+++ b/src/muramator.html
@@ -7,7 +7,6 @@
   <script type="text/javascript" src="d3.js"></script>
   <script type="text/javascript" src="js/contextGraph.js"></script>
   <script type="text/javascript" src="js/svg.js"></script>
-  <script type="text/javascript" src="js/muramator.js"></script>
   <link rel="stylesheet" type="text/css" href="muramator.css">
 </head>
 <body>
@@ -18,6 +17,10 @@
     <div>
       <input type="checkbox" name="report">Console Report</input>
     </div>
+    <div>
+      <input type="checkbox" name="obstacle">Obstacle?</input>
+    </div>
   </form>
+  <script type="text/javascript" src="js/muramator.js"></script>
 </body>
 </html>
