--- a/src/muramator.html
+++ b/src/muramator.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Muramator simulation</title>
   <script type="text/javascript">document.muramator = {};</script>
-  <script type="text/javascript" src="d3.js"></script>
+  <script type="text/javascript" src="js/d3.min.js"></script>
   <script type="text/javascript" src="js/contextGraph.js"></script>
   <script type="text/javascript" src="js/svg.js"></script>
   <link rel="stylesheet" type="text/css" href="muramator.css">
