--- a/src/muramator.html
+++ b/src/muramator.html
@@ -3,10 +3,10 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Muramator simulation</title>
-  <script type="text/javascript">document.muramator = {};</script>
+  <!--script type="text/javascript">document.muramator = {};</script-->
   <script type="text/javascript" src="lib/d3.min.js"></script>
-  <script type="text/javascript" src="js/contextGraph.js"></script>
-  <script type="text/javascript" src="js/svg.js"></script>
+  <script type="module" src="js/contextGraph.js"></script>
+  <script type="module" src="js/svg.js"></script>
   <link rel="stylesheet" type="text/css" href="muramator.css">
 </head>
 <body>
@@ -21,6 +21,6 @@
       <input type="checkbox" name="obstacle">Obstacle?</input>
     </div>
   </form>
-  <script type="text/javascript" src="js/muramator.js"></script>
+  <script type="module" src="js/muramator.js"></script>
 </body>
 </html>
