--- a/src/muramator.html
+++ b/src/muramator.html
@@ -2,9 +2,14 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta name="description" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>Muramator simulation</title>
   <!--script type="text/javascript">document.muramator = {};</script-->
   <script type="text/javascript" src="lib/d3.min.js"></script>
+  <script type="text/javascript" src="lib/p2.min.js"></script>
+  <script type="text/javascript" src="lib/p2.renderer.js"></script>
   <script type="module" src="js/contextGraph.js"></script>
   <script type="module" src="js/svg.js"></script>
   <link rel="stylesheet" type="text/css" href="muramator.css">
@@ -22,5 +27,6 @@
     </div>
   </form>
   <script type="module" src="js/muramator.js"></script>
+  <script type="module" src="js/world.js"></script>
 </body>
 </html>
