A more realistic movement sim and less sticking on walls

--- a/src/muramator.html
+++ b/src/muramator.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" type="text/css" href="muramator.css">
 </head>
 <body>
+  <div id="p2-root"></div>
+  <script type="module" src="js/muramator.js"></script>
   <form>
     <div>
       <input type="checkbox" name="simulate" checked>Simulate</input>
@@ -23,6 +25,5 @@
       <input type="checkbox" name="obstacle">Obstacle?</input>
     </div>
   </form>
-  <script type="module" src="js/muramator.js"></script>
 </body>
 </html>
